cluster/apps/llama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama
  namespace: llama
spec:
  selector:
    app.kubernetes.io/name: llama
  ports:
    - name: http
      port: 8080
      targetPort: http
